src/test/deca/context/valid/compatible_typeunaryoperation.deca
// Description:
//    operations binaires valides
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

{
    int i= 2; float f=1.0; boolean b =true;
    f=-i;
    b=!b;
}
