src/test/deca/context/invalid/Uncompatible_typeunaryoperation_not.deca
// Description:
//    operations binaires valides
//
// Resultats:
//    Uncompatible type for unary operation
//
// Historique:
//    cree le 08/01/2023

{
    !2;
}
